# bazzounquestercli

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  QUICKSTART.md  README.md  install.sh
.github/workflows/: ci.yml
benches/: request_benchmarks.rs
examples/: showcase.rs
src/: error.rs  lib.rs  main.rs
src/assertions/: assertion.rs  matcher.rs  mod.rs  validator.rs
src/auth/: api_key.rs  basic.rs  bearer.rs  mod.rs  oauth2.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/collections/: collection.rs  folder.rs  mod.rs  request_item.rs  storage.rs  workspace.rs
src/env/: environment.rs  manager.rs  mod.rs  substitution.rs
src/history/: entry.rs  logger.rs  mod.rs  storage.rs
src/http/: client.rs  mod.rs  request.rs  response.rs
src/repl/: interactive.rs  mod.rs
src/scripts/: context.rs  engine.rs  mod.rs  types.rs
src/session/: cookies.rs  manager.rs  mod.rs  session.rs
src/ui/: banner.rs  help.rs  mod.rs
src/upload/: file.rs  form.rs  mod.rs  multipart.rs
src/workflow/: chain.rs  executor.rs  mod.rs  step.rs
tests/: integration_tests.rs
