[package]
name = "bazzounquester"
version = "1.8.0"
edition = "2021"
authors = ["Hassan Bazzoun <hassan.bazzoundev@gmail.com>"]
description = "A powerful HTTP request CLI tool with interactive REPL mode - Your Postman in the terminal"
license = "MIT"
repository = "https://github.com/yourusername/bazzounquester"
keywords = ["http", "cli", "rest", "api", "postman"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "bazzounquester"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rustyline = "14.0"
shlex = "1.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
serde_yaml = "0.9"
regex = "1.11"
cookie_store = "0.21"
mime_guess = "2.0"
base64 = "0.22"
rhai = "1.21"

[dev-dependencies]
mockito = "1.5"
wiremock = "0.6"
criterion = "0.5"
tempfile = "3.14"

[[bench]]
name = "request_benchmarks"
harness = false
